src/test/resources/purescript_examples/failing/TypeOperatorAliasNoExport.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TransitiveExportError\n')
  PSASTWrapperElement(Program)
    PSASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSASTWrapperElement(ModuleName)
        PSASTWrapperElement(Qualified)
          PsiElement(proper name)('Test')
        PsiElement(whitespace)(' ')
      PsiElement(()('(')
      PSASTWrapperElement(PositionedDeclarationRef)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PsiElement(operator)('×')
        PsiElement())(')')
      PsiElement())(')')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(DataDeclaration)
        PsiElement(data)('data')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Tuple')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeArgs)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeConstructor)
          PSProperNameImpl(ProperName)
            PsiElement(proper name)('Tuple')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('a')
            PsiElement(whitespace)(' ')
        PSASTWrapperElement(TypeAtom)
          PSASTWrapperElement(GenericIdentifier)
            PsiElement(identifier)('b')
            PsiElement(whitespace)('\n\n')
      PSASTWrapperElement(NamedBinder)
        <empty list>
      PSASTWrapperElement(FixityDeclaration)
        PSASTWrapperElement(Fixity)
          PsiElement(infixl)('infixl')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('6')
          PsiElement(whitespace)(' ')
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSASTWrapperElement(ModuleName)
          PSASTWrapperElement(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Tuple')
              PsiElement(whitespace)(' ')
        PsiElement(as)('as')
        PsiElement(whitespace)(' ')
        PsiElement(operator)('×')
        PsiElement(whitespace)('\n')
